--- a/chatApp/BackEnd/package.json
+++ b/chatApp/BackEnd/package.json
@@ -9,7 +9,29 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@angular/animations": "^8.2.6",
+    "@angular/cdk": "^8.2.0",
+    "@angular/material": "^8.2.0",
+    "angularjs-toaster": "^3.0.0",
+    "arraylist": "^0.1.0",
+    "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "date-and-time": "^0.9.0",
+    "decimal-to-binary": "^1.0.3",
     "dotenv": "^8.1.0",
-    "express-validator": "^5.3.1"
+    "esm": "^3.2.25",
+    "express": "^4.17.1",
+    "express-validator": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.6.12",
+    "ng-animate": "^0.3.4",
+    "ng6-socket-io": "^1.0.3",
+    "node-emoji": "^1.10.0",
+    "nodemailer": "^6.3.0",
+    "random": "^2.1.1",
+    "readline-sync": "^1.4.10",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0"
   }            
 }
