--- a/fundoo/package.json
+++ b/fundoo/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "dotenv": "^8.1.0",
     "eslint": "^6.4.0",
     "express": "^4.17.1",
     "express-validator": "^5.3.1",
