--- a/fundoo/package.json
+++ b/fundoo/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "dotenv": "^8.1.0",
     "eslint": "^6.4.0",
     "express": "^4.17.1",
