--- a/fundoo/package.json
+++ b/fundoo/package.json
@@ -13,6 +13,7 @@
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "dotenv": "^8.1.0",
+    "email-existence": "^0.1.6",
     "eslint": "^6.4.0",
     "express": "^4.17.1",
     "express-validator": "^5.3.1",
