--- a/fundoo/package.json
+++ b/fundoo/package.json
@@ -9,15 +9,23 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.541.0",
     "bcrypt": "^3.0.6",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "dotenv": "^8.1.0",
     "email-existence": "^0.1.6",
-    "eslint": "^6.4.0",
     "express": "^4.17.1",
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
-    "node-mailer": "^0.1.1"
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
+    "node-mailer": "^0.1.1",
+    "redis": "^2.8.0"
+  },
+  "devDependencies": {
+    "eslint": "^6.5.1",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.15.1"
   }
 }
