--- a/fundoo/package.json
+++ b/fundoo/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "node-mailer": "^0.1.1",
+    "node-url-shortener": "^1.0.1",
     "redis": "^2.8.0"
   },
   "devDependencies": {
