--- a/fundoo/package.json
+++ b/fundoo/package.json
@@ -22,7 +22,8 @@
     "multer-s3": "^2.9.0",
     "node-mailer": "^0.1.1",
     "node-url-shortener": "^1.0.1",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "winston": "^3.2.1"
   },
   "devDependencies": {
     "eslint": "^6.5.1",
